[package]
name = "dev-app"
version = "0.2.0"
edition = "2024"
authors = ["29th-Day"]
license = "EUPL"

[package.metadata.wuhb]
name = "My Rust App"
# short-name = "Rust"
# icon = "abc.png"
# tv-image = "def.png"
# drc-image = "ghi.png"
# content = "/content/dir"

[dependencies]
# wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.4.2" }
wut = { path = "../wut" }
# kernel = { path = "../kernel", version = "*" }
# cafeglsl = { path = "../cafeglsl", version = "*" }
# guii = { path = "../guii" }
